# phd-lab

./: .gitignore  Cifar10 Collages.ipynb  Cifar100 Collages.ipynb  README.md  compute_receptive_field.py  copy_logs.py  environment-ikw.yml  environment.yml  gcam.py  gradient_flow_viz.ipynb  infer_with_altering_delta.py  multipath_ICLR.ipynb  multipath_analysis.ipynb  pixelwise_probes.ipynb  pyproject.toml  requirements.txt  size_matters_plots_2.ipynb  train_model.py  vis_model.py
configs/: 2resnetComparison.json  ImageNet.json  ImageNet2.json  ImageNetR.json  ImageNetR2.json  ImageNetR3.json  ImageNetR4.json  ProbesiNaturalist.json  ZIEL1.json  alexnet_test.json  alexnet_test2.json  big_resnetComparisonAblStudy.json  blackpadding.json  blackpadding2.json  blackpadding3.json  blackpadding4.json  bmvca1.json  bmvca10.json  bmvca11.json  bmvca2.json  bmvca22.json  bmvca3.json  bmvca4.json  bmvca5.json  bmvca6.json  bmvca7.json  bmvca8.json  bmvca9.json  complex_padding.json  complex_padding2.json  disentangled.json  disentangled10.json  disentangled11.json  disentangled12.json  disentangled2.json  disentangled3.json  disentangled4.json  disentangled5.json  disentangled6.json  disentangled7.json  (+53 more)
configs/automl/: efficientnetb0.json  efficientnetb0_2.json  efficientnetb0_3.json  efficientnetb0_res.json  fatnet.json  imagenette.json  vgg.json  (+8 more)
phd_lab/: __init__.py  extract_latent_representations.py  probe_meta_execution_script.py  setup.py  train_model.py  train_probes.py
phd_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_phd_lab.py  test_trainer.py
(+135 files in other folders)
