[tool.poetry]
name = "phd-lab"
version = "0.1.0"
description = ""
authors = ["Mats L. Richter <matsrichter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.6.0%2Bcu101-cp38-cp38-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.7.0%2Bcu101-cp38-cp38-win_amd64.whl"}
requires = ["poetry>=0.12",
            "attrs",
            "pandas",
            "delve",
            "numpy",
            "scipy",
            "scikit-learn",
            "dependency-injector"
]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12",
            "attrs",
            "pandas",
            "delve"
]
build-backend = "poetry.masonry.api"
